# s3-file-sharing

./: cdk.json  package-lock.json  package.json
.github/workflows/: deploy.yml
lib/: s3-file-manager-stack.ts
resources/s3-file-backend/: Cargo.toml
resources/s3-file-backend/src/: main.rs
test/: s3-file-manager.test.ts
